--- a/page3.html
+++ b/page3.html
@@ -45,8 +45,8 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best free css templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-12" data-rv-view="46" style="background-image: url(assets/images/img-1497-2000x2003.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a href="https://mobirise.me/m">free site design templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-12" data-rv-view="46" style="background-image: url(assets/images/img-1497-2000x2003.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
