--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-g" data-rv-view="1130">
+  <section id="dropdown-menu-g" data-rv-view="33">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-25" data-rv-view="1116" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-25" data-rv-view="19" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -121,18 +121,18 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-s" data-rv-view="1128">
+<section class="mbr-section" id="header3-s" data-rv-view="31">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">DROP-DEAD TO BE A BEAUTY MAKER</h3>
-                <p class="mbr-header__subtext">By YU-FANF posted JUE 30, 2018</p>
+                <h3 class="mbr-header__text">設計素描</h3>
+                <p class="mbr-header__subtext">By YU-FANG posted JUE 30, 2019</p>
             </div>
         </div>
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-13" data-rv-view="1134">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-13" data-rv-view="37">
     <!-- Gallery -->
     <div class="mbr-gallery-layout-article mbr-section__container mbr-section__container--isolated">
         <div>
@@ -254,7 +254,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-22" data-rv-view="1169" style="background-image: url(assets/images/54521934-2320516664902961-1977323228485386240-o-1439x960.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-22" data-rv-view="72" style="background-image: url(assets/images/54521934-2320516664902961-1977323228485386240-o-1439x960.jpg);">
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -272,18 +272,18 @@
     
 </section>
 
-<section class="mbr-section" id="header3-15" data-rv-view="1172">
+<section class="mbr-section" id="header3-15" data-rv-view="75">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">DROP-DEAD TO BE A Conscious Communicator</h3>
-                <p class="mbr-header__subtext">By YU- FANG posted JUE 30, 2018</p>
+                <h3 class="mbr-header__text">複合媒材作品</h3>
+                <p class="mbr-header__subtext">By YU- FANG posted JUE 30, 2019</p>
             </div>
         </div>
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-24" data-rv-view="1174" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-24" data-rv-view="77" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
@@ -363,7 +363,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-r" data-rv-view="1193">
+<section class="mbr-section" id="content1-r" data-rv-view="96">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>‘’ A world so hateful some would rather die than be who they are ‘’
@@ -372,7 +372,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-14" data-rv-view="1194" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-14" data-rv-view="97" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container boxed-slider container" style="padding-top: 93px; padding-bottom: 124px;">
         <div>
             
@@ -484,7 +484,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-h" data-rv-view="1132" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-h" data-rv-view="35" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 49.2px; padding-bottom: 49.2px;">
