--- a/page4.html
+++ b/page4.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-k" data-rv-view="1290">
+  <section id="dropdown-menu-k" data-rv-view="310">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="1212" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="232" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(31, 31, 31);"></div>
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 124px; padding-bottom: 124px;">
         <div class="row">
@@ -73,7 +73,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-1w" data-rv-view="1215" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-1w" data-rv-view="235" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
@@ -163,7 +163,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-19" data-rv-view="1218" style="background-image: url(assets/images/12783527-1089581434406931-4151753557295839990-o-2000x1333.jpeg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-19" data-rv-view="238" style="background-image: url(assets/images/12783527-1089581434406931-4151753557295839990-o-2000x1333.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -187,7 +187,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1a" data-rv-view="1221">
+<section class="mbr-section" id="header3-1a" data-rv-view="241">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -198,7 +198,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider2-1w" data-rv-view="1223">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider2-1w" data-rv-view="243">
     <div class="mbr-section__container article-slider container mbr-section__container--last">
         <div class=" col-sm-offset-2 col-sm-8">
             <ol class="carousel-indicators">
@@ -274,7 +274,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="features1-1y" data-rv-view="1235" style="background-image: url(assets/images/img-1858-312-2000x1333.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="features1-1y" data-rv-view="255" style="background-image: url(assets/images/img-1858-312-2000x1333.jpg);">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
@@ -351,7 +351,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-p" data-rv-view="1238" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-p" data-rv-view="258" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default container" style="padding-top: 124px; padding-bottom: 124px;">
         <div>
@@ -471,7 +471,7 @@
     </div>
 </section>
 
-<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-1y" data-rv-view="1273" style="background-image: url(assets/images/dsc03437-2000x1153.jpg);">
+<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-1y" data-rv-view="293" style="background-image: url(assets/images/dsc03437-2000x1153.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -493,7 +493,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-18" data-rv-view="1276" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-18" data-rv-view="296" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -569,7 +569,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="4" data-full-width="true" data-token="6191179828.727bfe1.e6b3b495981a4be4823ccf641a842926" data-per-row-grid="" id="instagram-feed-block-1x" data-rv-view="1288" style="background-image: url(assets/images/dsc-2669-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="4" data-full-width="true" data-token="6191179828.727bfe1.e6b3b495981a4be4823ccf641a842926" data-per-row-grid="" id="instagram-feed-block-1x" data-rv-view="308" style="background-image: url(assets/images/dsc-2669-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(26, 44, 93);">
     </div>
     <div class="container container_toggle">
@@ -585,7 +585,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-l" data-rv-view="1292" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-l" data-rv-view="312" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 49.2px; padding-bottom: 49.2px;">
