--- a/page5.html
+++ b/page5.html
@@ -28,7 +28,7 @@
 
             <div class="navbar-brand">
                 
-                <a class="text-white" href="https://mobirise.com">M o r i p o s a</a>
+                <a class="text-white" href="index.html">M o r i p o s a</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom mbr-after-navbar" id="image1-1w" data-rv-view="119">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom mbr-after-navbar" id="image1-1w" data-rv-view="119">
 
     <div><img src="assets/images/img-2s0s75-1400x2100.jpeg" class="mbr-figure__img"></div>
     <figcaption class="mbr-figure__caption mbr-figure__caption--std-grid">
@@ -230,7 +230,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE TO OUR NEWSLETTER">
-                            <input type="hidden" value="GhFY/8sQEMI031cmP+tMVlABEJ5oIL/qPeW7dQ7K8aLx6WfelGYFY6hjkZNBRXbea6iBv6JbgyEJvpjoMGHaN1m29cucqw/3wD5GWUADUHpCm+WS+2ToWH0pyB5eiQRU" data-form-email="true">
+                            <input type="hidden" value="5G3vM5izpLOU6bZfHA1r8D5tK+A4UvoxpICo4uNYzfYWRDlv1l0uahtSbo7qxvYFQTIcFkOSYG6e5tKMa9kyFr2r1+Fwgc7dGgL9zgkvICqphCQwvyydTDjbcp3WkMot" data-form-email="true">
                             <div class="mbr-form__left">
                                 <input type="email" class="form-control" name="email" required="" placeholder="Enter Your Email Address..." data-form-field="Email">
                             </div>
