--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,7 @@
 
             <div class="navbar-brand">
                 
-                <a class="text-white" href="https://mobirise.com">M o r i p o s a</a>
+                <a class="text-white" href="index.html">M o r i p o s a</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-v" data-rv-view="171" style="background-image: url(assets/images/img-6610-1600x2400.jpg);">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-v" data-rv-view="171" style="background-image: url(assets/images/img-6610-1600x2400.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
