--- a/page6.html
+++ b/page6.html
@@ -29,7 +29,7 @@
 
             <div class="navbar-brand">
                 
-                <a class="text-white" href="https://mobirise.com">M o r i p o s a</a>
+                <a class="text-white" href="index.html">M o r i p o s a</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="149" style="background-image: url(assets/images/51927901-2246705628916766-3665818221371457536-n-960x960.jpg);">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="149" style="background-image: url(assets/images/51927901-2246705628916766-3665818221371457536-n-960x960.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
