--- a/page1.html
+++ b/page1.html
@@ -37,7 +37,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Photography</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page3.html" aria-expanded="false">Project<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Photography</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
 
         </div>
 
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header1-v" data-rv-view="171" style="background-image: url(assets/images/img-6610-1600x2400.jpg);">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header1-v" data-rv-view="171" style="background-image: url(assets/images/img-6610-1600x2400.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
