create github pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Design</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Design</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">about me</a></li></ul>
 
         </div>
 
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -107,7 +107,7 @@
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 124px;">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong><em>WHO?</em></strong></p><p>「我是一個古怪的女孩」就連張愛玲也曾經這麼說過自己。</p><p>我是一位文本上癮者，對於產製、接收文本不可自拔。</p><p>我是一位魔法師，天馬行空、勇者鬥惡龍，最後的大BOSS可能是自己擁有一對惡魔角，在我的世界什麼都有可能。</p><p>事實上，我是一名叫陳郁方的女孩，一個平凡人。</p><p>&nbsp; &nbsp; 來自華江高中、世新大學公共關係暨廣告學系，今年大三。曾獲〔TC北市青年〕高中組散文 優選
-、青春有影2018台灣大學盃 百大精選獎、教育部〔憶文山〕計畫 優選....等獎項。</p><p><strong><em>WHY?</em></strong></p><p>做為一個想走傳播產業的學生，最常被問為什麼想要走這麼爆肝又沒什麼錢的行業。對於我來說這個問題，根本無法構成一個問題。『思考、創意』就是一場對於生命的旅程，簡單來說我們都走在一場名為「生活」的路上，一切都是這麼順其自然，沒錯，對我來說觀察生活、creat Ideas、思考邏輯都是天明所歸，像是呼吸一般的，傳播就是我每天都在做、最喜歡的、最樂此不疲的事。</p></div>
+、青春有影2018台灣大學盃 百大精選獎、教育部〔憶文山〕計畫 優選....等獎項。</p><p><strong><em>WHY?</em></strong></p><p>做為一個想走傳播產業的學生，最常被問為什麼想要走這麼爆肝又沒什麼錢的行業。對於我來說這根本無法構成一個問題。『思考、創意』就是一場對於生命的旅程，我們走在一場名為「生活」的路上，一切都是這麼順其自然，沒錯，對我來說觀察生活、creat Ideas、思考邏輯都是天命所歸，像是呼吸一般的，傳播就是我每天都在做、最喜歡的、最樂此不疲的事。</p></div>
         </div>
     </div>
     
