--- a/page4.html
+++ b/page4.html
@@ -40,7 +40,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Design</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Design</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">about me</a></li></ul>
 
         </div>
 
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="19" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="19" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(31, 31, 31);"></div>
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 124px; padding-bottom: 124px;">
         <div class="row">
@@ -174,7 +174,7 @@
     </div>
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><br></p><p><br></p><p>&nbsp;&nbsp;&nbsp;&nbsp;從興趣喜歡跟朋友去拍拍網美照，到買了第一台相機開始了攝影路，希望自己在以後能有個屬於自己的作品，擁有一個團隊，拍攝動態、平面的攝影都想多多嘗試，用相機，去記錄我的生活，失去文字後的我，老天並沒有放棄我，反而又開了一扇窗，讓我又多了一個方式去告訴大家，我眼中的世界，在這個世界我想當個第三者，去記錄這些，美好的瞬間，去凝結永遠。</p><p><br></p><p><br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><br></p><p><br></p><p>&nbsp;&nbsp;&nbsp;&nbsp;從興趣喜歡跟朋友去拍拍網美照，到買了第一台相機開始了攝影路，希望自己在以後能有個屬於自己的作品，擁有一個團隊，拍攝動態、平面的攝影都想多多嘗試，用相機，去記錄我的生活，失去文字後的我，轉而開啟了新的旅程，讓我又多了一個方式去告訴大家，我眼中的世界。在這個世界中我想當個置身事外的第三者，去記錄這些，美好的瞬間，去凝結永遠。</p><p><br></p><p><br></p></div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
