create github pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="7" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="7" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -52,7 +52,7 @@
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text">THE MAGICIANS</h1>
-                        <p class="mbr-hero__subtext">Magic come from plains. &nbsp;<br><br><strong><em>WELCOME TO FILORY</em></strong></p>
+                        <p class="mbr-hero__subtext">Magic come from plains. &nbsp;<br><br><em>WELCOME TO FILORY</em></p>
                     </div>
                     
                 </div></div>
@@ -178,7 +178,6 @@
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
   <script src="assets/dropdown-menu/script.js"></script>
-  <script src="assets/formoid/formoid.min.js"></script>
   
   
 </body>
